--- a/src/components/AppNav.module.css
+++ b/src/components/AppNav.module.css
@@ -25,4 +25,5 @@
 /* CSS Modules feature */
 .nav a:global(.active) {
   background-color: var(--color-dark--0);
+  transition: background-color 0.2s ease-in-out;
 }
